benchmarks/inference-server/vllm/envoy-config-lora/envoy-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
  namespace: default
  labels:
    app: vllm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: envoy-proxy
  type: LoadBalancer
