benchmarks/inference-server/vllm/envoy-config-lora/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
      - name: envoy
        image: us-docker.pkg.dev/kaushikmitra-gke-dev/kaushikmitra-docker-repo/envoy-wasm-lora:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
