benchmarks/inference-server/vllm/envoy-config-lora/envoy-hashing.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                        headers:
                        - name: "lora"
                      route:
                        cluster: lora_cluster
                        hash_policy:
                        - header:
                            header_name: "lora"
                http_filters:
                - name: envoy.filters.http.router
      clusters:
      - name: lora_cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: RING_HASH
        ring_hash_lb_config:
          minimum_ring_size: 32768
          hash_function: XX_HASH
        load_assignment:
          cluster_name: lora_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: lorax-kaushik-service.default.svc.cluster.local
                    port_value: 80
