benchmarks/inference-server/vllm/envoy-config-lora/vllm-lora-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lorax-kaushik-service
  labels:
    app: lorax-kaushik
spec:
  type: LoadBalancer
  selector:
    app: lorax-kaushik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
